@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class "AnnouncementController" as ctrl{
    +acceptVisitRequest
    +rejectVisitRequest
    +removeVisitRequest
    +sendEmail

}
class "RespondVisitRequestUI" as UI{
}



class Agent{
  -name
  +getName()
}
class SendEmail{
 +sendEmail(String message, String toEmail)
}


class AnnouncementAvailable{
    +filterAnnouncementAvailable(business,type,rooms)
    +getProperty()
}
class VisitRequest{
    +setStatus(String status)
    +getAgent()
    +getOwner()
}

class Property {
    -Int id
    -String type
    -String location
    -Int area
    -Int distanceCenter
    -String description
    -photograph
    -Owner owner

    + getInfo()
}





UI .> ctrl


ctrl .-> Property
ctrl .-> VisitRequest
ctrl .-> AnnouncementAvailable
ctrl .-> SendEmail
AnnouncementAvailable "1" o-- "1" Agent
AnnouncementAvailable "1" --> "1" Property : is about
AnnouncementAvailable "1" o-- "1.*" VisitRequest


@enduml